# paralegal-lk-internship-assignment

./: .gitignore  README.md  pyproject.toml
src/judgment_extractor/: __init__.py  cli.py  extractor.py  models.py
tests/: test_extractor.py
